# BonNextMinecraftLauncher-Rust

./: .gitignore  AGENTS.md  BonNext_Architecture_Report_CN.md  BonNext_Architecture_Report_EN.md  BonNext_Development_Roadmap.md  BonNext_Product_Report.md  BonNext_Project_Documentation.md  BonNext_Quality_Assessment_Report.md  BonNext_UX_Evaluation_Report.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _rewrite_helper.py  cargo-gnu-check.txt  cargo-stderr.txt  cargo-stderr2.txt  cargo-verbose.txt  commit.ps1  do-push.ps1  downsample_ply.py  eslint.config.js  gnu-bin.txt  gnu-dirs.txt  index.html  index.html.bak  package.json  pnpm-lock.yaml  push-branch.ps1  push-script.ps1  push-trace.ps1  rebase-push.ps1  run-cargo-check.ps1  run-check.ps1  run-gnu-check.ps1  rust-targets.txt  rustup-status.txt  self-contained.txt  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  liquid-glass.json
src-tauri/icons/: icon.icns
src-tauri/local-crates/sha1-asm-soft/: Cargo.toml
src-tauri/patches/sha1-asm/: Cargo.toml
src-tauri/src/: cache.rs  collections.rs  config.rs  content.rs  crash_knowledge.rs  crash_parser.rs  crash_watcher.rs  curseforge.rs  error.rs  http_client.rs  lib.rs  main.rs  mod_compat.rs  modpackindex.rs  modrinth.rs  persistent_cache.rs  recommendation.rs  social_feed.rs  terracotta.rs  types.rs  types_export.rs  url_config.rs  web_api.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  offline.rs  session.rs  skin_server.rs  token_store.rs  yggdrasil.rs
src-tauri/src/chat/: messages.rs
src-tauri/src/commands/: achievement.rs  auth.rs  cache.rs  chat.rs  cli.rs  collections.rs  config.rs  content.rs  crash_watcher.rs  curseforge.rs  download.rs  instance.rs  launch.rs  misc.rs  mod.rs  mod_scanner.rs  mod_watcher.rs  modpackindex.rs  modrinth.rs  network.rs  news.rs  optimization.rs  p2p.rs  plugin_install.rs  plugin_proxy.rs  plugin_session.rs  search.rs  server.rs  server_ping.rs  shell.rs  social.rs  system.rs  terracotta.rs  url_config.rs  version.rs  workflow.rs  world.rs
src-tauri/src/download/: assets.rs  mirror_health.rs  mod.rs  natives.rs  queue.rs  source.rs  verifier.rs
src-tauri/src/installer/: mod.rs
src-tauri/src/instance/: manager.rs  migration.rs  mod.rs
src-tauri/src/launch/: args.rs  mod.rs  process.rs  state.rs
src-tauri/src/launcher/: mod.rs
src-tauri/src/loader/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs
src-tauri/src/mod_scanner/: cache_db.rs  fingerprint.rs  mod.rs  models.rs  scanner.rs
src-tauri/src/mod_watcher/: mod.rs  watcher.rs
src-tauri/tests/: auth_tests.rs  config_test.rs  crypto_test.rs  download_tests.rs  integration_tests.rs  ipc_tests.rs  launch_state_tests.rs  launch_tests.rs  version_test.rs
(+986 files in other folders)
