[package]
name = "bonnext"
version = "0.0.4"
description = "A cross-platform Minecraft Java Edition launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "bonnext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sha1 = { version = "0.10", package = "sha1" }
hex = "0.4"
thiserror = "2"
directories = "6"
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v5"] }
url = "2"
parking_lot = "0.12"
webbrowser = "1"
zip = "2"
chrono = "0.4"
opener = "0.7"
urlencoding = "2"
sysinfo = "0.33"
flate2 = "1"
tar = "0.4"
tempfile = "3"
lazy_static = "1"
base64 = "0.22"

[dev-dependencies]
indoc = "2"
